--- a/Common/src/main/resources/META-INF/mods.toml
+++ b/Common/src/main/resources/META-INF/mods.toml
@@ -6,7 +6,7 @@ logoFile="icon.png"
 
 [[mods]]
 modId="easyelevators"
-version="1.0"
+version="1.1"
 displayName="Easy Elevators"
 displayURL="https://serilum.com/mod/easy-elevators"
 authors="Rick South"
@@ -14,7 +14,7 @@ description='''Easily go up and down fast via multiblock elevators! Highly confi
 '''
 credits='''Thank you very much to my Membership sponsors for supporting the development of this mod:  
 
-Alister, Andrean Olgo, aternosorg, BirdieMiner, Cherriesaurus, Michael W. S., Shana Gitnick, Sukhmai, Tyler Behl   
+Alister, Andrean Olgo, aternosorg, Cherriesaurus, Michael W. S., Nahuel Fernandez, Shana Gitnick, Tyler Behl   
 
 If you would like to contribute too, check out https://serilum.com/donate. Appreciate it! <3   
 '''
@@ -22,7 +22,7 @@ If you would like to contribute too, check out https://serilum.com/donate. Appre
 [[dependencies.easyelevators]]
     modId="collective"
     mandatory=true
-    versionRange="[7.71,)"
+    versionRange="[7.78,)"
     ordering="NONE"
     side="BOTH"
 
